- movement of the car - lanes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 </head>
 <body>
     <canvas id="myCanvas" height="789" width="200"></canvas>
+    <script src="utils.js"></script>
+    <script src="road.js"></script>
     <script src="controls.js"></script>
     <script src="car.js"></script>
     <script src="main.js"></script>
