--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
     <canvas id="myCanvas" height="789" width="200"></canvas>
+    <script src="sensor.js"></script>
     <script src="utils.js"></script>
     <script src="road.js"></script>
     <script src="controls.js"></script>
