--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <canvas id="myCanvas" height="789" width="200"></canvas>
+    <canvas id="carCanvas"></canvas>
+    <div id="verticalButtons">
+        <button onclick="save()">💾</button>
+        <button onclick="discard()">🗑️</button>
+    </div>
+    <canvas id="networkCanvas"></canvas>
+    <script src="visualizer.js"></script>
     <script src="network.js"></script>
     <script src="sensor.js"></script>
     <script src="utils.js"></script>
